--- a/Django/TodoSite/todo/templates/todo/index.html
+++ b/Django/TodoSite/todo/templates/todo/index.html
@@ -51,7 +51,7 @@
   {% endif %}
 
   <center class="row">
-    <h1><i>__TODO LIST__</i></h1>
+    <h1><i>{{title}}</i></h1>
     <hr />
   </center>
 
